[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/FashionVictim.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Lobby/Lobby.gd" type="Script" id=2]
[ext_resource path="res://Lobby/WaitingRoom.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_top = 0.00120931
anchor_right = 0.997234
anchor_bottom = 1.0
margin_top = 32.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
margin_right = 1021.0
margin_bottom = 50.0
text = "Lobby"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/VBoxContainer"]
margin_top = 82.0
margin_right = 1021.0
margin_bottom = 382.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/VBoxContainer/CenterContainer"]
margin_left = 296.0
margin_right = 724.0
margin_bottom = 300.0
custom_constants/separation = 32

[node name="GridContainer" type="GridContainer" parent="ColorRect/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 428.0
margin_bottom = 212.0
custom_constants/vseparation = 16
custom_constants/hseparation = 32
columns = 2

[node name="NameLabel" type="Label" parent="ColorRect/VBoxContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 76.0
margin_bottom = 55.0
text = "Name"
align = 2

[node name="NameLineEdit" type="LineEdit" parent="ColorRect/VBoxContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 108.0
margin_right = 428.0
margin_bottom = 60.0
rect_min_size = Vector2( 320, 60 )
text = "Player"

[node name="IPLabel" type="Label" parent="ColorRect/VBoxContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 81.0
margin_right = 76.0
margin_bottom = 131.0
text = "IP"
align = 2

[node name="IPLineEdit" type="LineEdit" parent="ColorRect/VBoxContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 108.0
margin_top = 76.0
margin_right = 428.0
margin_bottom = 136.0
rect_min_size = Vector2( 320, 60 )
text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="ColorRect/VBoxContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_top = 157.0
margin_right = 76.0
margin_bottom = 207.0
text = "Port"
align = 2

[node name="PortLineEdit" type="LineEdit" parent="ColorRect/VBoxContainer/CenterContainer/VBoxContainer/GridContainer"]
margin_left = 108.0
margin_top = 152.0
margin_right = 428.0
margin_bottom = 212.0
rect_min_size = Vector2( 320, 60 )
text = "4444"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 244.0
margin_right = 428.0
margin_bottom = 300.0
custom_constants/separation = 32
alignment = 1

[node name="HostButton" type="Button" parent="ColorRect/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 200.0
margin_bottom = 56.0
text = "Host Game"

[node name="JoinButton" type="Button" parent="ColorRect/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 232.0
margin_right = 407.0
margin_bottom = 56.0
text = "Join Game"

[node name="WaitingRoomPopup" parent="." instance=ExtResource( 3 )]

[node name="Label" parent="WaitingRoomPopup/ColorRect/VBoxContainer" index="0"]
margin_bottom = 50.0

[node name="CenterContainer" parent="WaitingRoomPopup/ColorRect/VBoxContainer" index="1"]
margin_top = 82.0
margin_bottom = 91.0

[node name="PlayerList" parent="WaitingRoomPopup/ColorRect/VBoxContainer/CenterContainer" index="0"]
margin_top = 4.0
margin_bottom = 4.0

[node name="StartButton" parent="WaitingRoomPopup/ColorRect/VBoxContainer" index="2"]
visible = false
margin_top = 123.0
margin_bottom = 179.0
[connection signal="text_changed" from="ColorRect/VBoxContainer/CenterContainer/VBoxContainer/GridContainer/NameLineEdit" to="." method="_on_NameLineEdit_text_changed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/CenterContainer/VBoxContainer/HBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="WaitingRoomPopup/ColorRect/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]

[editable path="WaitingRoomPopup"]
